buildscript {
    repositories {
        mavenLocal()
        maven { url = 'https://files.minecraftforge.net/maven' }
        jcenter()
        mavenCentral()
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1+', changing: true
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
    }
}
apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'

version = '1.9.20'
group = 'com.alan19.astral' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'astral'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'parchment', version: '1.18.1-2022.03.06-1.18.2'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                astral {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                astral {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file("run")
            environment 'target', 'fmluserdevdata'
            properties 'fml.earlyprogresswindow': 'false'

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            args '--all', '--output', file('src/generated/resources/'),
                    '--mod', 'astral', '--reports',
                    '--existing', sourceSets.main.resources.srcDirs[0]
        }
    }
}

sourceSets {
    main {
        resources {
            srcDirs = [
                    "$rootDir/src/main/resources",
                    "$rootDir/src/generated/resources"
            ]
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.0.36'
    compileClasspath fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
    compileClasspath fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:1.18.1-1.0.5-Snapshot.1")
    compileClasspath fg.deobf("vazkii.botania:Botania:1.18.2-430-SNAPSHOT")
    compileClasspath fg.deobf("top.theillusivec4.curios:curios-forge:1.18.2-5.0.6.3")
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3544525")
}

// I believe this is for using datagens with forge tags
project.afterEvaluate {
    minecraft.runs.data.args('--existing', configurations.minecraft.asPath.split(":").toList().find { it.contains("forge") }.split(";")[0])
}

repositories {
    mavenLocal()
    maven {
        // for AutoRegLib
        name "blamejared"
        url "https://maven.blamejared.com/"
    }
    maven {
        // for JEI
        name "progwml6"
        url "https://dvs1.progwml6.com/files/maven"
    }
    maven {
        name "brassgoggledcoders"
        url "https://maven.teamacronymcoders.com/"
    }
    //Gradle
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        url = "https://www.cursemaven.com"
    }
    maven {
        url "https://nexus.resourcefulbees.com/repository/maven-public/"
    }
}


jar {
    manifest {
        attributes([
                "Specification-Title"     : "astral",
                "Specification-Vendor"    : "minerarcana",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "minerarcana",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}